--- a/Style.css
+++ b/Style.css
@@ -2,55 +2,57 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Audiowide", serif;
 }
 body {
   margin: 0;
   padding: 0;
   width: 100%;
-  background: linear-gradient(91deg, #fffef0, #e2fdfbe4, #e5eaff);
+  background: linear-gradient(91deg, #fff5d5, #dff1ff, #d4fffbe4);
 }
-header {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+.container {
   width: 100%;
+  padding: 0% 4% 0 4%;
+}
+header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   border-bottom: 1.5px solid rgba(126, 125, 125, 0.34);
   background: linear-gradient(91deg, #fffef0, #e5eaff);
-}
-.navbar-list ul {
-  align-items: center;
-  height: 6vh;
-  width: 40vw;
-  justify-content: center;
-  backdrop-filter: blur(20px);
-  display: flex;
-  gap: 3rem;
-}
-.navbar-list ul li {
-  font-family: "Montserrat", serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-size: 1.2rem;
-  list-style: none;
-}
-.navbar-list ul li a {
-  color: #00cdbbe4;
-  text-decoration: none;
-}
-.navbar-list ul li :hover {
-  color: #0407a9;
 }
 .logo img {
   height: 8vh;
 }
+nav {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+.menu ul {
+  display: flex;
+  gap: 4%;
+  font-family: "Audiowide", serif;
+  font-size: 1.3rem;
+  list-style: none;
+  font-weight: 400;
+  text-decoration: none;
+}
+.menu ul li a {
+  text-decoration: none;
+  color: rgb(2, 135, 184);
+}
+
 .login-button button {
+  font-family: "Audiowide", serif;
   font-size: 1rem;
   height: 6vh;
   width: 8vw;
   border: 1px solid rgb(2, 135, 184);
   border-radius: 6px;
   color: aliceblue;
-  background-color: rgb(5, 119, 160);
+  background-color: rgb(2, 135, 184);
 }
 .login-button :hover {
   cursor: grab;
@@ -62,82 +64,81 @@ header {
 }
 .banner-discription {
   display: flex;
-  align-items: center;
   justify-content: center;
   flex-direction: column;
   width: 40%;
-  padding: 0px;
 }
-.slogan {
-  font-family: "Abril Fatface", serif;
+.slogan p {
+  font-family: "Audiowide", serif;
   font-weight: 300;
   font-style: italic;
   font-size: 2.2rem;
-  text-align: center;
+  text-align: left;
 }
 .banner-button {
   display: flex;
-  gap: 20px;
-  margin-top: 10px;
+  justify-content: flex-start;
+  gap: 10px;
+  margin: 10px 50px 0px 0;
 }
 .banner-button button {
   cursor: pointer;
   font-size: 1rem;
-  height: 40px;
-  width: 190px;
+  height: 100%;
+  width: 170px;
   text-align: center;
-  font-family: "Montserrat", serif;
+  font-family: "Audiowide", serif;
   font-weight: 400;
   color: white;
   margin: 8px;
-  background-color: rgb(5, 119, 160);
-  border: 0.1px solid rgb(5, 119, 160);
+  background-color: #4682b4;
+  border: 0.1px solid #4682b4;
   border-radius: 30px;
-  box-shadow: 0.4px 2px 5px rgb(0, 79, 108);
+  box-shadow: 0.4px 2px 5px #4682b4;
 }
 .banner-slideshow .slide img {
   object-fit: cover;
   width: 100%;
   height: 70vh;
-  padding: 3%;
-  border: 3px solid linear-gradient(91deg, #ffef15, #27fff1e4, #3d64ff);
-  border-radius: 3rem;
+  padding-top: 1.2%;
+  border: 3px linear-gradient(91deg, #ffef15, #27fff1e4, #3d64ff);
+  border-radius: 2rem;
 }
 .about {
   display: flex;
   flex-direction: column;
 }
+.about-slogan h1 {
+  margin: 8% 0 2% 0;
+  font-size: 3rem;
+  font-weight: 400;
+}
+.about-slogan p {
+  margin: 2% 0 2% 0;
+  font-size: 1.5rem;
+  font-weight: 400;
+  color: rgb(5, 119, 160);
+}
 .about-slogan {
+  font-family: "Audiowide", serif;
   font-style: italic;
-  margin: 3%;
   text-align: center;
 }
 .about-event {
   display: flex;
   gap: 5%;
 }
-
 .about-event h2 {
-  font-family: "montserrat", serif;
+  font-family: "Nunito", serif;
   font-weight: 600;
   font-size: 1.8rem;
   text-align: center;
 }
 .about-event ul li {
-  font-family: "montserrat", serif;
+  font-family: "Nunito", serif;
   list-style: none;
   line-height: 2rem;
   text-align: center;
-}
-.about-slogan h1 {
-  font-size: 3rem;
-  font-weight: 400;
-}
-.about-slogan p {
-  margin: 1.3rem;
-  font-size: 1.6rem;
-  font-weight: 400;
-  color: rgb(5, 119, 160);
 }
 .vintage {
   display: flex;
@@ -181,12 +182,13 @@ header {
   background-color: #00cdbbe4;
   color: white;
 }
-footer {
-  margin-top: 3rem;
+footer .container {
+  margin: 8% 0 0 0;
   height: 20vh;
-  border-top: 2px solid rgba(162, 162, 162, 0.34);
+  width: 100%;
+  border-top: 3px solid rgba(162, 162, 162, 0.34);
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 .footer-logo img {
@@ -194,34 +196,45 @@ footer {
 }
 footer .footer-socials {
   display: flex;
+
   flex-direction: row;
   gap: 2rem;
   font-size: 2rem;
   list-style: none;
 }
+footer .footer-list ul {
+  font-family: "Nunito", serif;
+  list-style: none;
+  font-size: 1.16rem;
+  line-height: 1.6rem;
+  letter-spacing: 1.3px;
+  font-weight: 400;
+  cursor: pointer;
+}
 
 .speaker h1 {
-  margin: 8%;
-  margin-bottom: 4%;
+  margin: 8% 0 2% 0;
   font-style: italic;
-  letter-spacing: 0.4rem;
-  font-size: 2.4rem;
-  font-family: "abril-fatface", serif;
+  font-size: 3rem;
+  font-family: "Audiowide", serif;
   font-optical-sizing: auto;
-  font-weight: 600;
+  font-weight: 500;
   text-align: center;
 }
 .speaker-slogan {
+  margin: 2% 0 2% 0;
+  font-size: 1.6rem;
+  font-weight: 400;
+  color: rgb(5, 119, 160);
   text-align: center;
-  font-size: 1.2rem;
-  letter-spacing: 0.4rem;
-  text-decoration: underline;
+  font-style: italic;
 }
 
 .speaker1 {
   align-items: center;
   justify-content: center;
-  margin: 5%;
+  margin: auto;
+  width: 68%;
   gap: 2%;
   height: 40vh;
   display: flex;
@@ -232,41 +245,45 @@ footer .footer-socials {
 .speaker1 h2 {
   margin: 2%;
   font-size: 2rem;
-  font-family: "montserrat", serif;
+  font-family: "Nunito", serif;
   font-optical-sizing: auto;
   font-weight: 600;
 }
 .speaker1 p {
   margin: 2%;
   font-size: 1rem;
-  font-family: "Lato";
+  font-family: "Nunito", serif;
   font-weight: 400;
 }
-.speaker1-img {
-  height: 40vh;
-}
-.speaker1-img img {
+.speaker1 img {
   height: 40vh;
   object-fit: cover;
-
   border-radius: 20rem;
+  padding: 1%;
+}
+.first {
+  margin-bottom: 2%;
+}
+.second {
+  margin-top: 2%;
 }
 .contact-us {
   max-width: 800px;
   justify-self: center;
-  background: linear-gradient(91deg, #fffef0, #e2fdfbe4, #e5eaff);
+  background: transparent;
   width: 800px;
   height: 60vh;
   padding: 25px 40px 10px 40px;
-  margin: 3%;
 }
 
 .contact-us .contact-us-heading {
-  text-align: center;
-  font-size: 35px;
-  font-weight: 400;
-  font-family: "Abril Fatface", serif;
+  margin: 6% 0 0 0;
   font-style: italic;
+  font-size: 3rem;
+  font-family: "Audiowide", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  text-align: center;
 }
 .contact-us form {
   padding: 30px 0 0 0;
@@ -275,7 +292,9 @@ footer .footer-socials {
   display: flex;
   margin: 32px 0;
 }
-
+.event-info {
+  line-height: 3.2rem;
+}
 form .form-row .input-data {
   width: 100%;
   height: 40px;
@@ -287,9 +306,9 @@ form .form-row .textarea {
 }
 .input-data input,
 .textarea textarea {
-  font-family: "montserrat", serif;
+  font-family: "Nunito", serif;
   display: block;
-  background: linear-gradient(91deg, #fffef0, #e2fdfbe4, #e5eaff);
+  background: transparent;
   width: 100%;
   height: 100%;
   border: none;
@@ -306,40 +325,42 @@ form .form-row .textarea {
   resize: none;
   padding-top: 8px;
 }
-.event-heading {
-  text-align: center;
-  font-family: "abril-fatface", serif;
-  font-weight: 300;
+.event-heading h1 {
+  margin: 8% 0 2% 0;
   font-style: italic;
-  font-size: 2rem;
-  margin: 6%;
-  color: rgb(54, 54, 54);
+  font-size: 3rem;
+  font-family: "Audiowide", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  text-align: center;
 }
 .event-cards {
   display: flex;
   flex-direction: column;
-  font-family: "montserrat", serif;
+  font-family: "Nunito", serif;
   font-weight: 400;
 }
 .event-card {
   display: flex;
-  gap: 20px;
+  gap: 5%;
   justify-content: center;
   align-items: center;
 }
 .event-info {
-  line-height: 3.4rem;
+  display: flex;
+  gap: 5%;
+  flex-direction: column;
+  line-height: 3.6rem;
 }
 .event-card img {
-  border: 2px solid#148cdb;
-  box-shadow: 1px 2px 10px #3498db;
+  border: 0.15rem solid#148cdb;
   border-radius: 1rem;
   width: 14%;
   object-fit: cover;
 }
 .event-button {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 20px;
   cursor: pointer;
 }
@@ -349,23 +370,44 @@ form .form-row .textarea {
   gap: 20px;
 }
 .event-button button {
-  font-family: "montserrat", serif;
   cursor: pointer;
   font-size: 1rem;
-  width: 200px;
   height: 2.4rem;
-  border: 1px solid #3498db;
-  border-radius: 0.6rem;
+  width: 170px;
+  text-align: center;
+  font-family: "Nunito", serif;
+  font-weight: 400;
   color: white;
-  background-color: #3498db;
+  margin: 8px;
+  background-color: #4682b4;
+  border: 0.1px solid #4682b4;
+  border-radius: 30px;
+  box-shadow: 0.4px 2px 5px #4682b4;
 }
+
 .event-underline {
   border: 1px solid #3498db;
-  width: 80%;
-  margin: 2% 10% 2% 10%;
+  width: 100%;
+  margin: 2% 0 2% 0;
+}
+.event-name h2 {
+  font-family: "Nunito", serif;
+  font-size: 2.2rem;
+}
+.event-date p {
+  font-family: "Nunito", serif;
+  font-size: 1.2rem;
+}
+.event-venue p {
+  font-family: "Nunito", serif;
+  font-size: 1.2rem;
+}
+.event-timing p {
+  font-family: "Nunito", serif;
+  font-size: 1.2rem;
 }
 .input-data label {
-  font-family: "montserrat", serif;
+  font-family: "Nunito", serif;
   font-style: normal;
   position: absolute;
   pointer-events: none;
@@ -403,29 +445,81 @@ form .form-row .textarea {
   letter-spacing: 1px;
   cursor: pointer;
   position: relative;
-  z-index: 2;
+  z-index: 1;
 }
 @media only screen and (max-width: 1000px) {
-  .navbar-list {
+  .navbar-toggler {
+    display: inline-block;
+  }
+
+  .menu {
     display: none;
+    flex-direction: column;
+  }
+
+  .list {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .login-button {
+    display: none;
+  }
+}
+
+@media (min-width: 769px) {
+  .menu {
+    position: relative;
+    position: static;
+    flex-direction: row;
+    gap: 4%;
+    background: none;
+    box-shadow: none;
+    padding: 0;
+  }
+
+  .navbar-toggler {
+    display: none;
+  }
+
+  .login-button {
+    display: block;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  header .container {
+    width: 100vw;
+    justify-content: space-between;
   }
   .login-button {
     display: none;
   }
-  .logo{
-    justify-content: flex-start;
-  }
-}
-@media only screen and (max-width: 800px) {
-  header {
-    width: 100vw;
-  }
   .logo img {
-    height: 4vh;
+    position: relative;
+    left: 20px;
+    height: 6vh;
   }
-
-  .navbar-list {
-    display: none;
+  .menu {
+    width: 100%;
+    overflow: hidden;
+  }
+  label {
+    display: inline-flex;
+  }
+  .navbar-toggler {
+    display: inline-flex;
+    font-size: 2rem;
+    position: relative;
+    right: 20px;
+  }
+  #toggler :checked ~ .menu {
+  }
+  .list {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
   }
   .login-button {
     display: none;
@@ -434,20 +528,34 @@ form .form-row .textarea {
     display: flex;
     flex-direction: column-reverse;
     gap: 2%;
+    height: 104vh;
   }
   .banner-slideshow .slide img {
     object-fit: cover;
-    width: 100vw;
-    height: 26vh;
+    border-radius: 1rem;
+    margin: auto;
+    width: 94vw;
+    height: 40vh;
   }
   .slogan p {
-    font-size: 2rem;
+    font-size: 1.8rem;
+    text-align: center;
+    width: 100vw;
+  }
+  .banner-button {
+    position: relative;
+    left: 1.2rem;
+  }
+  .banner-button button {
+    height: 2.1rem;
   }
   .banner-discription {
-    width: 100vw;
-    padding: 2%;
-    height: 41vh;
+    width: 94vw;
+    height: 60vh;
+    align-items: center;
+    text-align: center;
     margin-bottom: 3%;
+    font-size: 1rem;
   }
   .about-slogan h1 {
     margin-top: 10%;
@@ -462,18 +570,19 @@ form .form-row .textarea {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: auto;
+  }
+  .about-event ul li {
+    line-height: 1.4rem;
   }
   .vintage {
-    width: 100vw;
-    padding: 2%;
+    width: 90vw;
   }
   .present {
-    width: 100vw;
-    padding: 2%;
+    width: 90vw;
   }
   .future {
-    width: 100vw;
-    padding: 2%;
+    width: 90vw;
   }
   .banner-button {
     display: flex;
@@ -483,12 +592,13 @@ form .form-row .textarea {
   .first {
     display: flex;
     flex-direction: column-reverse;
-    height: 70vh;
+    height: 80vh;
     width: 80vw;
     justify-self: center;
+    text-align: center;
   }
-  .speaker1-img img {
-    height: 26vh;
+  .first img {
+    height: 20vh;
     border-radius: 20rem;
   }
   .event-card img {
@@ -500,24 +610,26 @@ form .form-row .textarea {
   .second {
     display: flex;
     flex-direction: column;
-    height: 60vh;
+    height: 80vh;
     width: 80vw;
     justify-self: center;
+    text-align: center;
   }
-  .second-img img {
-    height: 26vh;
+  .second img {
+    height: 20vh;
     border-radius: 20rem;
-    margin-top: 0 4% 0 0;
+    margin: 10% 0 0 0;
   }
-  .events{
+  .events {
     margin-top: 12%;
   }
-  .event-heading{
-    font-size: 2.2rem;
-    font-family: "montserrat", serif;
+  .event-heading {
+    font-size: 1.6rem;
+    font-family: "Nunito", serif;
     font-weight: 400;
     font-style: italic;
   }
+
   .speaker-discription {
     padding: 1%;
     display: flex;
@@ -528,7 +640,7 @@ form .form-row .textarea {
   .contact-us {
     width: 100vw;
     margin-top: 10%;
-    height: 80vh;
+    height: 90vh;
   }
   .event-cards {
     display: flex;
@@ -539,7 +651,14 @@ form .form-row .textarea {
     flex-direction: column;
     text-align: center;
   }
-
+  .event-name h2 {
+    font-size: 1.8rem;
+  }
+  .event-button {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
   .contact-us .contact-us-heading {
     font-size: 30px;
   }
@@ -555,11 +674,25 @@ form .form-row .textarea {
   .submit-btn .input-data {
     width: 40% !important;
   }
-  footer {
+  footer .container {
     display: flex;
+    height: 40vh;
     flex-direction: column;
   }
-  footer .footer-socials {
+  .footer-list {
+    text-align: center;
+    line-height: 2rem;
+  }
+  footer .footer-socials ul li {
     display: flex;
+  }
+  #toggler {
+    opacity: 1;
+  }
+  nav > input:checked ~ .navbar {
+    background-color: black;
+  }
+  .toggle :checked ~ .navbar > {
+    background-color: black;
   }
 }
